--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Doofy Ventures - Revolutionizing the Entertainment Industry</title>
+    <title>BookmyTestcenter</title>
     <!-- Meta End-->
 
     <!-- Favicon -->
